--- a/app/css/login.css
+++ b/app/css/login.css
@@ -2,6 +2,7 @@
     margin-top: 74px;
     margin-left: 83px;
     width: 430px;
+    margin-bottom: 93px;
 }
 
 .submit-btn{
@@ -98,7 +99,6 @@ body{
       position: relative;
   max-width: 1200px;
   margin: 0 auto;
-  margin-top: 93px;
  } 
 
 .footer{
