--- a/app/css/main.css
+++ b/app/css/main.css
@@ -68,7 +68,6 @@ margin-top: 23px;
       position: relative;
   max-width: 1200px;
   margin: 0 auto;
-  margin-top: 93px;
  } 
 
 .footer{
@@ -169,6 +168,7 @@ margin-top: 23px;
 .main-content{
     float: right;
     width: 650px;
+    margin-bottom: 93px;
 }
 
 .navigation-links{
